View Issue Details

IDProjectCategoryView StatusLast Update
0022523Open CASCADEOCCT:DRAWpublic2012-03-30 10:16
Reporterkgv Assigned Tokgv  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
OSAll 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022523: DRAWEXE randomly crashed on smooth navigation in 3D-Viewer
DescriptionSome times DRAWEXE crashed when navigation performed in 3D-Viewer (vinit,
rotation / movements).
Debugger mostly say that this happens in NIS_View::Select() due to small
movement vector anXdir.
TagsNo tags attached.
Test case numbertest case is not required

Attached Files

  • kgv-OCC22523-v1.tar.gz (3,810 bytes)

Activities

2011-05-20 11:45

 

kgv-OCC22523-v1.tar.gz (3,810 bytes)

kgv

2012-03-27 12:08

developer   ~0020155

Patch was updated and prepared in CR22523 branch of GIT repository.
Please review.

aan

2012-03-28 10:27

developer   ~0020180

Dear BugMaster,

Workbench KAS:dev:aan-22523-occt was created from git branch CR22523
(and aan-22523-products from svn trunk) and compiled on Linux platform.

There are not regressions in aan-22523-products regarding to
KAS:dev:products-20120326-opt

See results in
/QADisk/occttests/results/KAS/dev/aan-22523-products_27032012/lin
See reference results in
/QADisk/occttests/results/KAS/dev/products-20120326-opt_26032012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following
instructions
http://doc/doku.php?id=occt:certification

Related Changesets

occt: master 476ed21f

2012-03-27 07:58:50

kgv

Details Diff
0022523: DRAWEXE randomly crashed on smooth navigation in 3D-Viewer

Check vector modulus to avoid possible exceptions.
Affected Issues
0022523
mod - src/NIS/NIS_View.cxx Diff File

Issue History

Date Modified Username Field Change
2012-03-27 12:08 kgv Note Added: 0020155
2012-03-27 12:08 kgv Assigned To bugmaster => san
2012-03-27 12:08 kgv Status new => resolved
2012-03-27 12:25 abv Status resolved => reviewed
2012-03-27 12:25 abv Product Version => 6.5.2
2012-03-27 12:25 abv Fixed in Version EMPTY =>
2012-03-27 12:25 abv Target Version => 6.5.3
2012-03-27 12:25 abv Description Updated
2012-03-27 12:56 mkv Assigned To san => aan
2012-03-28 10:27 aan Note Added: 0020180
2012-03-28 10:27 aan Test case number => test case is not required
2012-03-28 10:27 aan Status reviewed => tested
2012-03-30 10:16 kgv Changeset attached => occt master 476ed21f
2012-03-30 10:16 kgv Assigned To aan => kgv
2012-03-30 10:16 kgv Status tested => verified
2012-03-30 10:16 kgv Resolution open => fixed