0022523: DRAWEXE randomly crashed on smooth navigation in 3D-Viewer

Check vector modulus to avoid possible exceptions.